fix(medias): Add responsiveness to the medias page

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="https://npmcdn.com/angular2-toaster@5.0.0/toaster.css" />
   
-  <!-- <script src="http://cdn.peerjs.com/0.3/peer.js"></script> -->
-  <!-- <script src="assets/peer.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/6.2.1/simplepeer.min.js"></script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/simple-peer/6.2.1/simplepeer.min.js"></script> -->
 </head>
 
 <body>
